--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Montagu+Slab:opsz,wght@16..144,500&family=Oleo+Script&family=Poppins:wght@100;400&family=Roboto&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+body{
+  width: 95%;
+  margin : 0 auto;
+  /* background-color: #5f4be3; */
+  background-color: #ebe4f2;
+  /* color: #a755fa; */
+  color: #8fe055;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+#correctAnswer{
+  background-color : green;
+  color : white;
+  border: 2px solid white;
+}
+#wrongAnswer{
+  background-color: red;
+  color: black;
+  border: 2px solid black;
 }
